--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:hint="Enter Response Here"
-        android:inputType="numberDecimal"
+        android:inputType="number"
+        android:maxLength="7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/floatingActionButton"
         app:layout_constraintStart_toStartOf="parent" />
